--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,7 @@ html {
 
 body {
   padding-top: 60px;
+  background-color: #a9ba9d  ;
 }
 
 section {
@@ -28,7 +29,7 @@ textarea {
 }
 /* typography */
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, {
   line-height: 1;
 }
 
@@ -37,6 +38,7 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+  color: #336699;
 }
 
 h2 {
@@ -46,6 +48,16 @@ h2 {
   text-align: center;
   font-weight: normal;
   color: $grayLight;
+}
+
+h5{
+  font-size: .9em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #336699;
+
 }
 
 p {
@@ -62,8 +74,8 @@ p {
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
+  padding-top: 9px; 
+/*  font-weight: bold;*/
   line-height: 1;
  	&:hover {
   		color: white;
