--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Contact') %>
+<div class="center hero-unit">
 <h1>Contact</h1>
 <p>
   Contact Ruby on Rails Tutorial about the sample app at the
