--- a/app/views/static_pages/product.html.erb
+++ b/app/views/static_pages/product.html.erb
@@ -1,7 +1,10 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'Product') %>
 <div class="center hero-unit">
-<h1>About Us</h1>
-<p>
+<h1>Products</h1>
+
+This is the product page
+
+<!-- <p>
   Gulch puts energy costs and usage in context. Through a suite of interactive tools, we model energy billing and usage for energy professionals and the real estate industry. 
 </p>
 
@@ -11,4 +14,4 @@
 
 <h2> Advisors</h2>
 <h5> Seyi Fabode </h5>
-<h5> George Foster</h5>
+<h5> George Foster</h5> -->
