--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,15 @@
 <footer class="footer">
   <small>
-    <p> 650 W. Lake Street Chicago, IL. | Phone: (630) 248-0777 | Email: info@gulchsolutions.com</p>
+    <ul> 
+    	<li> 650 W. Lake Street Chicago, IL.| </li>
+    	<li> Phone: (630) 248-0777 | </li>
+    	<li>Email: info@gulchsolutions.com</li> 
+    </ul>
    
   </small>
   <nav>
     <ul>
-      
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+ 
     </ul>
   </nav>
 </footer>
