--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,8 +2,7 @@
 <div class="center hero-unit">
 <h1>About Us</h1>
 <p>
-  Gulch puts energy costs and usage in context. Through a suite of interactive tools, we model energy billing and usage for energy professionals and the real estate industry. 
-</p>
+  Gulch provides context for energy billing and usage. At the intersection of Energy and Technology, Gulch provides unparalled insight into saving money and energy. </p>
 
 <h2> Team: </h2>
 <h5> J.S. Roy </h5>
