--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <div class="center hero-unit">
   <h1>Gulch</h1>
-  <h3> Simplifying Energy Billing and Usage</h3>
+
+  <h2> Simplifying Energy Billing and Usage</h2>
+
+  <!-- <img src="assets/images/imga.jpg" width="303" height="160" alt="Gulch Solutions"/> -->
 
   <%= link_to "Demo", signup_path, class: "btn btn-large btn-primary" %>
 </div>
