--- a/app/views/static_pages/product.html.erb
+++ b/app/views/static_pages/product.html.erb
@@ -2,7 +2,12 @@
 <div class="center hero-unit">
 <h1>Products</h1>
 
-This is the product page
+<p> Energy Professionals </p>
+<p> Real Estate Professionals </p>
+
+
+
+
 
 <!-- <p>
   Gulch puts energy costs and usage in context. Through a suite of interactive tools, we model energy billing and usage for energy professionals and the real estate industry. 
