--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,7 @@ html {
 
 body {
   padding-top: 60px;
+  background-color: #c0d0f0 ;
 }
 
 section {
@@ -22,21 +23,22 @@ textarea {
 
 .center {
   text-align: center;
-	h1 {
- 	 margin-bottom: 10px;
-	}
+  h1 {
+   margin-bottom: 10px;
+  }
 }
 /* typography */
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, {
   line-height: 1;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 1.4em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+  color: #336699;
 }
 
 h2 {
@@ -47,6 +49,17 @@ h2 {
   font-weight: normal;
   color: $grayLight;
 }
+
+h5{
+  font-size: .9em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #336699;
+
+}
+
 
 p {
   font-size: 1.1em;
@@ -62,35 +75,41 @@ p {
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
+  padding-top: 9px; 
+/*  font-weight: bold;*/
   line-height: 1;
- 	&:hover {
-  		color: white;
-  		text-decoration: none;
-  	}
+  &:hover {
+      color: white;
+      text-decoration: none;
+    }
 }
 footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $grayMediumLight;
   color: $grayLight;
+
+
  a {
   color: #555;
-	&:hover {
-  		color: $grayDarker;
-  	}
+  &:hover {
+      color: $grayDarker;
+    }
 }
 small {
   float: left;
+  margin-left: 70px;
+  text-align: center;
 }
 
 ul {
   float: right;
   list-style: none;
- 	li {
-  		float: left;
-  		margin-left: 10px;
-		}
-	}
+  li {
+      float: left;
+      margin-left: 10px;
+      text-align: center;
+    }
+  }
 }
+
