--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,13 @@
 <% provide(:title, 'About Us') %>
+<div class="center hero-unit">
 <h1>About Us</h1>
 <p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
-</p>
+  Gulch provides context for energy billing and usage. At the intersection of Energy and Technology, Gulch provides unparalled insight into saving money and energy. </p>
+
+<h2> Team: </h2>
+<h5> J.S. Roy </h5>
+<h5> Kevin Lillie </h5>
+
+<h2> Advisors</h2>
+<h5> Seyi Fabode </h5>
+<h5> George Foster</h5>
