--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,6 +2,5 @@
 <div class="center hero-unit">
 <h1>Contact</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
+Please contact us with any questions or inquiries. You can email us at info@gulchsolutions.com or give us a call at (630-248-0777)
 </p>
